FileChooser portal: set current_name

Fixes: QTBUG-100297
Pick-to: 6.3 6.2
Change-Id: I5d41e01aafeccce2d886debdb595b4c87b03a043
Reviewed-by: Jan Grulich <jgrulich@redhat.com>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>